[package]
name = "l3"
version = "0.1.0-dev"
authors = ["J Balint Biro <j.balint.biro@gmail.com>"]
description = "Interpreter for the L3 language"
license = "ISC License"
license-file = "LICENSE"

[dependencies]
clap = "2"
pest = "^1.0.0-beta"
pest_derive = "^1.0.0-beta"
gc = "*"
gc_derive = "*"
lazy_static = "1.0.0"

